--- a/services/api/Dockerfile
+++ b/services/api/Dockerfile
@@ -1,3 +1,13 @@
 FROM golang:1.23
 
-WORKDIR usr/src/app
+WORKDIR /usr/src/app
+
+COPY go.mod go.sum ./
+RUN go mod download && go mod verify
+
+COPY . .
+RUN go build  -v -o /usr/local/bin/app ./cmd
+
+EXPOSE 8080
+
+CMD ["/usr/local/bin/app"]
