--- a/services/auth/Dockerfile
+++ b/services/auth/Dockerfile
@@ -8,6 +8,8 @@ RUN go mod download && go mod verify
 COPY . .
 RUN go build -v -o /usr/local/bin/app ./services/auth/cmd
 
+RUN go get -u github.com/air-verse/air
+
 EXPOSE 8081
 
-CMD ["/usr/local/bin/app"]
+CMD ["air"]
