--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,6 +34,8 @@ services:
         depends_on:
             - redis
             - rabbitmq
+        volumes:
+            - ./services:api
 
     auth:
         build:
@@ -45,6 +47,8 @@ services:
         depends_on:
             - redis
             - rabbitmq
+        volumes:
+            - ./services:auth
 
 volumes:
     redis_data:
