--- a/services/api/Dockerfile
+++ b/services/api/Dockerfile
@@ -2,13 +2,16 @@ FROM golang:1.23
 
 WORKDIR /usr/src/app
 
-COPY go.mod go.sum ./
+COPY ./services/api/go.mod ./services/api/go.sum ./
 RUN go mod download && go mod verify
 
-COPY . .
-RUN go build -v -o /usr/local/bin/app ./services/api/cmd
+COPY ./services/api .
 
 RUN go get -u github.com/air-verse/air
+RUN go install github.com/air-verse/air
+RUN mkdir -p tmp && chmod 777 tmp
+
+RUN go build -v -o /usr/local/bin/app ./cmd
 
 EXPOSE 8080
 
